--- a/tools/neovim/readme.adoc
+++ b/tools/neovim/readme.adoc
@@ -12,6 +12,8 @@ Neovim - Vim taken a step further.
 [%collapsible]
 ====
 . https://vim.fandom.com/wiki/Delete_all_lines_containing_a_pattern
+. https://github.com/stevearc/oil.nvim
+. `:tab split` + `leader n`
 ====
 
 == http://vimcasts.org/episodes/meet-neovim/[Introduction]
@@ -19,6 +21,10 @@ Neovim - Vim taken a step further.
 == References
 
 * https://neovim.io/doc/user/
+* https://neovim.io/doc/user/intro.html
+* https://neovim.io/doc/user/#_-basic-editing
+* https://neovim.io/doc/user/options.html
+* https://neovim.io/doc/user/windows.html
 * https://www.youtube.com/watch?v=gnupOrSEikQ[How to Configure Vim like VSCode (benawad)]
 ** https://gist.github.com/benawad/b768f5a5bbd92c8baabd363b7e79786f[init.vim file from Ben Awad]
 
