--- a/programming/readme.adoc
+++ b/programming/readme.adoc
@@ -5,35 +5,42 @@
 :stylesheet: ../style.css
 :linkcss:
 
+== References
+. https://en.wikipedia.org/wiki/History_of_programming_languages
+. https://dl.acm.org/conference/hopl[ACM Conference on History of Programming Languages]
+. https://aosabook.org/en/[2011, The Architecture of Open Source Applications]
+. https://youtube.com/playlist?list=PLVFrD1dmDdvdvWFK8brOVNL7bKHpE-9w0[Structure and Interpretation of Computer Programs - YouTube playlist by @code_report]
+. https://youtube.com/playlist?list=PLVFrD1dmDdvdv7trr5j9ir7qrFK5K80X0[Seven Languages in Seven Weeks - YouTube playlist by @code_report]
+. https://youtube.com/playlist?list=PLVFrD1dmDdvcjCQDPhExqP56jqxp0Ssn_[Category Theory for Programmers - YouTube playlist by @code_report]
+. https://dl.acm.org/doi/10.1145/359576.359579[1978, John Backus, Can programming be liberated from the von Neumann style?: a functional style and its algebra of programs]
+. https://dl.acm.org/doi/10.1145/358896.358899[1980, Kenneth E. Iverson, Notation as a tool of thought]
+. https://dl.acm.org/doi/abs/10.1145/3386319[2020, Roger Hui and Morten Kromberg, APL since 1978]
+. https://aplwiki.com/wiki/Leading_axis_theory
+. https://dl.acm.org/doi/10.1145/3520306.3534504[2022, Conor Hoekstra, Combinatory logic and combinators in array languages]
+. https://www.cs.rochester.edu/~scott/pragmatics/[1999, 2015, Michael Scott, Programming Language Pragmatics]
+. https://www.info.ucl.ac.be/~pvr/VanRoyChapter.pdf[Programming Paradigms for Dummies: What Every Programmer Should Know]
+. https://people.inf.ethz.ch/wirth/AD.pdf[Algorithms and Data Structures by Niklaus Wirth]
+. https://people.csail.mit.edu/feser/pld-s23/Wirth_Design.pdf[On the Design of Programming Languages by Niklaus Wirth]
+. https://blog.codinghorror.com/when-good-comments-go-bad/
+
 .TODO
 [%collapsible]
 ====
-. https://en.wikipedia.org/wiki/History_of_programming_languages
-. [The Architecture of Open Source Applications](https://aosabook.org/en/)
 . https://exercism.org/
-. https://www.cs.rochester.edu/~scott/pragmatics/[Programming Language Pragmatics]
-. https://dl.acm.org/doi/10.1145/359576.359579[1978, John Backus, Can programming be liberated from the von Neumann style?: a functional style and its algebra of programs]
-. https://dl.acm.org/doi/10.1145/358896.358899[1980, Kenneth E. Iverson, Notation as a tool of thought]
-. https://dl.acm.org/doi/10.1145/3520306.3534504[2022, Conor Hoekstra, Combinatory logic and combinators in array languages]
-. https://youtube.com/playlist?list=PLVFrD1dmDdvdvWFK8brOVNL7bKHpE-9w0[Structure and Interpretation of Computer Programs - YouTube playlist by @code_report]
-. https://youtube.com/playlist?list=PLVFrD1dmDdvcjCQDPhExqP56jqxp0Ssn_[Category Theory for Programmers - YouTube playlist by @code_report]
-. https://youtube.com/playlist?list=PLVFrD1dmDdvdv7trr5j9ir7qrFK5K80X0[Seven Languages in Seven Weeks - YouTube playlist by @code_report]
 . https://en.wikipedia.org/wiki/Type_class
 . https://en.wikipedia.org/wiki/Tacit_programming
 . https://aplwiki.com/wiki/Train
 . https://docs.modular.com/mojo/
 . https://www.uiua.org/
-. https://www.info.ucl.ac.be/~pvr/VanRoyChapter.pdf[Programming Paradigms for Dummies: What Every Programmer Should Know]
-. https://people.inf.ethz.ch/wirth/AD.pdf[Algorithms and Data Structures by Niklaus Wirth]
 ====
 
-== Start Programming
+== Rankings
 
-If you are new to programming I would recommend you to start with Python or TypeScript.
-They are both multi-paradigm high-level languages.
-Which means you can do basically anything with them relatively easily.
-Also they are 2nd and 4th in https://octoverse.github.com/2022/top-programming-languages[GitHub's Top languages used in 2022] ranking.
-And 6th, 4th in the https://survey.stackoverflow.co/2022/#most-loved-dreaded-and-wanted-language-love-dread[Stack Overflow's most loved language] ranking.
+https://plrank.com/
+
+== Satisfaction
+
+https://survey.stackoverflow.co/2023/#technology-admired-and-desired
 
 == https://en.wikipedia.org/wiki/List_of_programming_languages_by_type[Types of Programming Languages]
 
@@ -145,4 +152,4 @@ https://julialang.org/[Julia]::
 Great (array) language for mathematics that runs fast (jit).
 
 link:bqn[BQN]::
-Iversonian language, by Marshall Lochbaum who started in J and implemented a lot of Dyalog APL himself.
+An Iversonian language by Marshall Lochbaum, a https://aplwiki.com/wiki/J[J] expert who implemented much of Dyalog APL himself.
